@@ -15,6 +15,7 @@ git-annex (5.20140228) UNRELEASED; urgency=medium
   * view, vfilter: Add support for filtering tags and values out of a view,
     using !tag and field!=value.
   * vadd: Allow listing multiple desired values for a field.
+  * view: Refuse to enter a view when no branch is currently checked out.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 28 Feb 2014 14:52:15 -0400
 
